<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:padding="5dp"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:background="?android:attr/selectableItemBackground"
    cardView:cardElevation="2dp"
    cardView:cardCornerRadius="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:paddingBottom="30dp"
        android:paddingTop="30dp">

        <ImageView
            android:contentDescription="@string/restaurant_image"
            android:src="@drawable/muffin"
            android:id="@+id/res_image"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_width="80dp"
            android:layout_height="80dp"/>

        <TextView
            android:id="@+id/res_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_alignTop="@+id/res_image"
            android:layout_toEndOf="@+id/res_image"
            android:layout_marginStart="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/restaurant_name"/>

        <TextView
            android:id="@+id/res_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/res_name"
            android:layout_alignStart="@+id/res_name"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorAccent"
            android:text="@string/restaurant_type"/>

        <TextView
            android:id="@+id/res_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_alignTop="@+id/res_name"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:textColor="@color/fadetext"
            android:textSize="13sp"
            android:text="@string/inactive" />

        <TextView
            android:id="@+id/res_delivery_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/res_type"
            android:layout_alignStart="@+id/res_type"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp"
            android:text="@string/delivers_in_xx_minutes"/>

        <TextView
            android:id="@+id/res_min_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/res_delivery_time"
            android:layout_toEndOf="@+id/res_delivery_time"
            android:layout_marginStart="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp"
            android:text="@string/min_order_xxx"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>