<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="2dp"
    android:layout_marginRight="10dp"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    cardView:cardCornerRadius="2dp"
    cardView:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp">

                <ImageView
                    android:contentDescription="@string/vegetarian_dish"
                    android:src="@drawable/dish_type_veg"
                    android:id="@+id/imageview_green_confirm"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_vertical"
                    android:visibility="gone"
                    android:layout_width="8dp"
                    android:layout_height="8dp"/>

                <ImageView
                    android:contentDescription="@string/non_vegetarian_dish"
                    android:src="@drawable/dish_type_nonveg"
                    android:id="@+id/imageview_red_confirm"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_vertical"
                    android:visibility="visible"
                    android:layout_width="8dp"
                    android:layout_height="8dp"/>

                <TextView
                    android:id="@+id/orderrow_orderconfirmed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textAlignment="center"
                    android:textSize="11sp"
                    android:text="@string/default_status"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp">

                <ImageView
                    android:contentDescription="@string/vegetarian_dish"
                    android:src="@drawable/dish_type_veg"
                    android:id="@+id/imageview_green_deliver"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_vertical"
                    android:visibility="gone"
                    android:layout_width="8dp"
                    android:layout_height="8dp"/>

                <ImageView
                    android:contentDescription="@string/non_vegetarian_dish"
                    android:src="@drawable/dish_type_nonveg"
                    android:id="@+id/imageview_red_deliver"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_vertical"
                    android:visibility="visible"
                    android:layout_width="8dp"
                    android:layout_height="8dp"/>

                <TextView
                    android:id="@+id/orderrow_orderdelivered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textAlignment="center"
                    android:textSize="11sp"
                    android:text="@string/default_status"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/sectionSeparatorCardView"
            android:background="@color/sectionSeparatorCardView"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:contentDescription="@string/restaurant_image"
                android:src="@drawable/muffin"
                android:layout_width="40dp"
                android:layout_height="40dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/orderrow_restname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2dp"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp"
                    android:text="@string/restaurant_name"/>

                <TextView
                    android:id="@+id/order_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:textSize="12sp"
                    android:text="@string/ordered_on_xx_xxx_xxxx_at_x_xxpm"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/sectionSeparatorCardView"
            android:background="@color/sectionSeparatorCardView"
            android:paddingBottom="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <TextView
                android:id="@+id/dish_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="13sp"
                android:text="@string/order_description"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="13sp"
                    android:text="@string/total"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="13sp"
                    android:text="@string/Rs"/>

                <TextView
                    android:id="@+id/orderrow_totalprice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="13sp"
                    android:text="@string/xxx"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>