<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_addaddressinfo"
        layout="@layout/toolbar" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginCardViewOverall"
        android:layout_marginTop="5dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        cardView:cardCornerRadius="2dp"
        cardView:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:textSize="@dimen/headingCardView"
                android:text="@string/where_do_you_live"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/headingSeparatorCardView"
                android:background="@color/headingSeparatorCardView" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardview_houseno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginCardViewOverall"
        android:layout_marginTop="5dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible"
        android:orientation="vertical"
        cardView:cardCornerRadius="2dp"
        cardView:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:textSize="@dimen/headingCardView"
                android:text="@string/required_details"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/headingSeparatorCardView"
                android:background="@color/headingSeparatorCardView" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/flat_no"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/spinner"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/enter_flat_house_no"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/full_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/spinner"
                    android:layout_centerHorizontal="true"
                    android:ems="13"
                    android:inputType="textMultiLine"
                    android:hint="@string/enter_full_address"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/headingSeparatorCardView"
                android:background="@color/headingSeparatorCardView" />

            <Button
                android:id="@+id/button_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:textAllCaps="false"
                android:visibility="visible"
                android:text="@string/submit"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>